--- a/02. component/ex01/public/_index.html
+++ b/02. component/ex01/public/_index.html
@@ -7,7 +7,12 @@
     <title>ex08</title>
 </head>
 <body>
-    <div id='root'></div>
-    <script src='bundle.js'></script>
+    <div id='root'>
+        <ul>
+            <li>Bread : 10</li>
+            <li>Milk : 5</li>
+            <li>Egg : 20</li>
+        </ul>
+    </div>
 </body>
 </html>
